--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -80,6 +80,7 @@ a {
   transition: color 0.3s;
 }
 
+/*
 details {
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -87,3 +88,4 @@ details {
   background-color: #eee;
   margin-bottom: 1rem;
 }
+*/
