--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -1,20 +1,31 @@
 @import "./base.css";
 
 nav .router-link-active {
-    background-color: #1890ff;
-    color: #fff!important;
+  background-color: #1890ff;
+  color: #fff !important;
 }
 
 .container {
-    h2, h4, h6 {
-        line-height: 2;
-        color: #444;
+  h2, h4, h6 {
+    line-height: 2;
+    color: #444;
+  }
+
+  h2 {
+    font-size: 22px;
+    margin-top: 2em;
+
+    &:first-child {
+      margin-top: initial;
     }
-    h2 {
-        font-size: 22px;
-        margin-top: 2em;
-        &:first-child {
-            margin-top: initial;
-        }
-    }
+  }
+}
+
+details {
+  display: block !important;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 0.5rem;
+  background-color: #eee;
+  margin: 1rem 0;
 }
